--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
     }
 
     buildFeatures {
-        viewBinding = true
+        dataBinding true
     }
 
     buildTypes {
@@ -40,11 +40,13 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def lifecycle_version = "2.4.0"
     def espresso_version = "3.4.0"
     def room_version = "2.3.0"
     def coroutines_version = "1.6.0-RC"
     def nav_version = "2.3.5"
+    def koin_version= "3.1.4"
 
     // App dependencies
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -61,6 +63,13 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.test.espresso:espresso-idling-resource:$espresso_version"
 
+    // Koin Core features
+    implementation "io.insert-koin:koin-core:$koin_version"
+    // Koin Test features
+    testImplementation "io.insert-koin:koin-test:$koin_version"
+    // Koin main features for Android
+    implementation "io.insert-koin:koin-android:$koin_version"
+
     //Room dependencies
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
@@ -72,6 +81,7 @@ dependencies {
 
     // Local unit test
     testImplementation 'junit:junit:4.+'
+    testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
 
     // Instrumented test
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
