--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     def coroutines_version = "1.6.0-RC"
     def nav_version = "2.3.5"
     def koin_version= "3.1.4"
+    def glide_version = "4.12.0"
 
     // App dependencies
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -62,6 +63,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.test.espresso:espresso-idling-resource:$espresso_version"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 
     // Koin Core features
     implementation "io.insert-koin:koin-core:$koin_version"
