--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -40,6 +40,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def lifecycle_version = "2.4.0"
     def espresso_version = "3.4.0"
@@ -48,6 +49,9 @@ dependencies {
     def nav_version = "2.3.5"
     def koin_version= "3.1.4"
     def glide_version = "4.12.0"
+    def retrofit_version = "2.9.0"
+    def scalars_version="2.9.0"
+    def moshi_version = "1.13.0"
 
     // App dependencies
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -63,6 +67,14 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.test.espresso:espresso-idling-resource:$espresso_version"
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-scalars:$scalars_version"
+    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+
+    // Moshi
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
