--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.android.outdraw"
-        minSdk 19
-        targetSdk 31
+        minSdk 21
+        targetSdk 33
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -44,7 +44,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def lifecycle_version = "2.4.0"
     def espresso_version = "3.4.0"
-    def room_version = "2.3.0"
+    def room_version = "2.4.0-alpha03"
     def coroutines_version = "1.6.0-RC"
     def nav_version = "2.3.5"
     def koin_version= "3.1.4"
@@ -54,7 +54,7 @@ dependencies {
     def moshi_version = "1.13.0"
 
     // App dependencies
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
@@ -102,4 +102,7 @@ dependencies {
     // Instrumented test
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+
 }
