--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,67 +42,44 @@ android {
 dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    def lifecycle_version = "2.4.0"
-    def espresso_version = "3.4.0"
-    def room_version = "2.4.0-alpha03"
-    def coroutines_version = "1.6.0-RC"
-    def nav_version = "2.3.5"
-    def koin_version= "3.1.4"
-    def glide_version = "4.12.0"
-    def retrofit_version = "2.9.0"
-    def scalars_version="2.9.0"
-    def moshi_version = "1.13.0"
 
     // App dependencies
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     //Navigation dependencies
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-service:$lifecycle_version"
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation "androidx.test.espresso:espresso-idling-resource:$espresso_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
 
     // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-scalars:$scalars_version"
-    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
-
-    // Moshi
-    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
 
     // Glide
-    implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation "com.github.bumptech.glide:glide:4.12.0"
 
-    // Koin Core features
-    implementation "io.insert-koin:koin-core:$koin_version"
-    // Koin Test features
-    testImplementation "io.insert-koin:koin-test:$koin_version"
-    // Koin main features for Android
-    implementation "io.insert-koin:koin-android:$koin_version"
+    // Koin
+    implementation "io.insert-koin:koin-core:3.1.5"
+    testImplementation "io.insert-koin:koin-test:3.1.5"
+    implementation "io.insert-koin:koin-android:3.1.5"
 
     //Room dependencies
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor("androidx.room:room-compiler:$room_version")
-    kapt "androidx.room:room-compiler:$room_version"
-
-    //Coroutines Dependencies
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "androidx.room:room-ktx:2.5.0"
+    implementation "androidx.room:room-runtime:2.5.0"
+    annotationProcessor("androidx.room:room-compiler:2.5.0")
+    kapt "androidx.room:room-compiler:2.5.0"
 
     // Local unit test
-    testImplementation 'junit:junit:4.+'
-    testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation "io.insert-koin:koin-test-junit4:3.1.5"
 
     // Instrumented test
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
 
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
-
 }
