--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         tools:ignore="ScopedStorage" />
 
     <application
-        android:name=".MyApp"
+        android:name="at.andrewagner.outdraw.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -29,7 +29,7 @@
         </provider>
 
         <activity
-            android:name=".MainActivity"
+            android:name="at.andrewagner.outdraw.MainActivity"
             android:exported="true"
             android:grantUriPermissions="true"
             android:screenOrientation="locked">
