--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
 
-    // Glide
-    implementation "com.github.bumptech.glide:glide:4.12.0"
+    // Coil
+    implementation "io.coil-kt:coil:2.3.0"
 
     // Koin
     implementation "io.insert-koin:koin-core:3.1.5"
